# thedistance.app

./: .gitignore  CLAUDE.md  README.md  render.yaml
.github/workflows/: test.yml
appview/: .env.example  pyproject.toml
appview/app/: auth.py  backfill.py  cli.py  config.py  db.py  identity.py  main.py  oauth.py  parse.py  strava.py  subscriber.py  tid.py
appview/tests/: test_duplicate_detection.py  test_parse.py  test_strava_import.py  test_tid.py
appview/tests/fixtures/: ride.fit  ride.gpx  ride.tcx
lexicons/: app.thedistance.activity.json  app.thedistance.follow.json  app.thedistance.like.json
scripts/: strava-to-records.py
web/: app.js  eleventy.config.js  index.html  package.json  pnpm-lock.yaml  serve.json  shared.js  style.css  upload.js
web/profile/: index.html  profile.js
web/src/: app.js  index.webc  profile.js  shared.js  style.css  upload.js
web/src/_components/: activity-list.webc  activity-upload-form.webc  auth-form.webc  dink-us.webc  home-auth.webc  home-hero.webc  msg-banner.webc  page-footer.webc  page-header.webc  scheme-chooser.webc
web/src/_data/: site.js
web/src/_includes/: layout.webc
web/src/about/: index.webc
web/src/add-activities/: index.webc
web/src/images/: hero-image-01.avif  home-auth-bg.avif
web/src/login/: index.webc
web/src/profile/: index.webc
web/src/profile/activity/: index.webc
web/src/upload/: index.webc
web/upload/: index.html
